syntax = "proto3";

import "property_type.proto";

service UserService {
    rpc CreateClient (CreateClientMessage) returns (EmptyMessage) {}

    rpc GetUsersByRole (GetByRoleMessage) returns (stream UserMessage) {}

    rpc BlockUser (UserIdMessage) returns (UserMessage) {}

    rpc UnblockUser (UserIdMessage) returns (UserMessage) {}
}

message CreateClientMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    bool is_landlord = 5;
}

message GetByRoleMessage {
    string role = 1;
}

message UserMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    string phone = 5;
    bool account_blocked = 6;
    string role = 7;
}

message UserIdMessage {
    int64 id = 1;
}
